# CoveragePlanner

./: CMakeLists.txt  README.md
data/: map.pgm
include/: bcd.h  cgal_comm.h  cgal_definitions.h  coverage_planner.h  decomposition.h  graph_base.h  graph_base_impl.h  sweep.h  tcd.h  visibility_graph.h  visibility_polygon.h  weakly_monotone.h
src/: bcd.cc  cgal_comm.cc  decomposition.cc  main.cpp  sweep.cc  tcd.cc  visibility_graph.cc  visibility_polygon.cc  weakly_monotone.cc
